; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/cr16/extr_cr16_disas.c_cr16_print_longregreg_reg.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/cr16/extr_cr16_disas.c_cr16_print_longregreg_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cr16_cmd = type { i32 }

@CR16_INSTR_MAXLEN = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [17 x i8] c"%s,0x%08x(%s,%s)\00", align 1
@cr16_regs_names = common dso_local global i8** null, align 8
@.str.1 = private unnamed_addr constant [17 x i8] c"0x%08x(%s,%s),%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cr16_cmd*, i32, i32, i32, i32)* @cr16_print_longregreg_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cr16_print_longregreg_reg(%struct.cr16_cmd* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.cr16_cmd*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.cr16_cmd* %0, %struct.cr16_cmd** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %12 = load i32, i32* %9, align 4
  %13 = call i64 @cr16_check_reg_boundaries(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %24, label %15

15:                                               ; preds = %5
  %16 = load i32, i32* %9, align 4
  %17 = add nsw i32 %16, 1
  %18 = call i64 @cr16_check_reg_boundaries(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %24, label %20

20:                                               ; preds = %15
  %21 = load i32, i32* %10, align 4
  %22 = call i64 @cr16_check_reg_boundaries(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %20, %15, %5
  store i32 -1, i32* %6, align 4
  br label %77

25:                                               ; preds = %20
  %26 = load i32, i32* %11, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %52

28:                                               ; preds = %25
  %29 = load %struct.cr16_cmd*, %struct.cr16_cmd** %7, align 8
  %30 = getelementptr inbounds %struct.cr16_cmd, %struct.cr16_cmd* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i64, i64* @CR16_INSTR_MAXLEN, align 8
  %33 = sub nsw i64 %32, 1
  %34 = load i8**, i8*** @cr16_regs_names, align 8
  %35 = load i32, i32* %9, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i8*, i8** %34, i64 %36
  %38 = load i8*, i8** %37, align 8
  %39 = load i32, i32* %8, align 4
  %40 = load i8**, i8*** @cr16_regs_names, align 8
  %41 = load i32, i32* %10, align 4
  %42 = add nsw i32 %41, 1
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i8*, i8** %40, i64 %43
  %45 = load i8*, i8** %44, align 8
  %46 = load i8**, i8*** @cr16_regs_names, align 8
  %47 = load i32, i32* %10, align 4
  %48 = sext i32 %47 to i64
  %49 = getelementptr inbounds i8*, i8** %46, i64 %48
  %50 = load i8*, i8** %49, align 8
  %51 = call i32 (i32, i64, i8*, ...) @snprintf(i32 %31, i64 %33, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* %38, i32 %39, i8* %45, i8* %50)
  br label %76

52:                                               ; preds = %25
  %53 = load %struct.cr16_cmd*, %struct.cr16_cmd** %7, align 8
  %54 = getelementptr inbounds %struct.cr16_cmd, %struct.cr16_cmd* %53, i32 0, i32 0
  %55 = load i32, i32* %54, align 4
  %56 = load i64, i64* @CR16_INSTR_MAXLEN, align 8
  %57 = sub nsw i64 %56, 1
  %58 = load i32, i32* %8, align 4
  %59 = load i8**, i8*** @cr16_regs_names, align 8
  %60 = load i32, i32* %9, align 4
  %61 = add nsw i32 %60, 1
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds i8*, i8** %59, i64 %62
  %64 = load i8*, i8** %63, align 8
  %65 = load i8**, i8*** @cr16_regs_names, align 8
  %66 = load i32, i32* %9, align 4
  %67 = sext i32 %66 to i64
  %68 = getelementptr inbounds i8*, i8** %65, i64 %67
  %69 = load i8*, i8** %68, align 8
  %70 = load i8**, i8*** @cr16_regs_names, align 8
  %71 = load i32, i32* %10, align 4
  %72 = sext i32 %71 to i64
  %73 = getelementptr inbounds i8*, i8** %70, i64 %72
  %74 = load i8*, i8** %73, align 8
  %75 = call i32 (i32, i64, i8*, ...) @snprintf(i32 %55, i64 %57, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i32 %58, i8* %64, i8* %69, i8* %74)
  br label %76

76:                                               ; preds = %52, %28
  store i32 0, i32* %6, align 4
  br label %77

77:                                               ; preds = %76, %24
  %78 = load i32, i32* %6, align 4
  ret i32 %78
}

declare dso_local i64 @cr16_check_reg_boundaries(i32) #1

declare dso_local i32 @snprintf(i32, i64, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
